# labelBro

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
label_bro/: app.py  cli.py
label_bro/static/css/: style.css
label_bro/static/js/: app.js
label_bro/templates/: base.html  index.html
label_bro/tests/: test_cli.py
label_bro/utils/: label_creation.py  printer_utils.py
