[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "label_bro"
version = "0.1.0"
description = "A description of your CLI tool"
readme = "README.md"
authors = [{ name="Your Name", email="you@example.com" }]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["tox", "pytest"]
