[metadata]
name = label_bro
version = 0.1.0
description = A description of your CLI tool
author = Your Name
author_email = you@example.com

[options]
packages = find:
python_requires = >=3.7
entry_points =
    console_scripts =
        label_bro = label_bro.cli:main

[options.extras_require]
dev = tox
